<resources>
    <string name="app_name">SDKDemo</string>
    <string name="ok">OK</string>
    <string name="msg1">Please use the bank card swiping card</string>
    <string name="msg2">Please enter the bank card password</string>
    <string name="msg3">Please enter the supervisor password</string>
    <string name="msg4">Please make sure the return of the amount</string>
    <string name="cardno">Card number:</string>
    <string name="show_pinpad_view">Display PINPAD the view</string>
    <string name="load_protect_key">"Load protect key "</string>
    <string name="load_main_key">Load 6F70543AFFDC24E0E51709EA4064F9E5 successfully</string>
    <string name="success">Success</string>
    <string name="defeated">Fail</string>
    <string name="load_mac_key">Load MAC key </string>
    <string name="calculation_mac_values">MAC1 value is computed:</string>
    <string name="calculation_mac_data_length">Calculate the length of the String data MAC:</string>
    <string name="calculation_mac_btye_length">Calculate the length byte data as the MAC:</string>
    <string name="calculation_mac_byte_values">Calculate the byte data for MAC:</string>
    <string name="call_beeper">Call the buzzer</string>
    <string name="get_device_information">Call device information module</string>
    <string name="call_led">Call the LED module</string>
    <string name="call_pboc">Call the PBOC module</string>
    <string name="call_pinpad_function">Call the pinpad module</string>
    <string name="download_aid_data">"Download the AID of data "</string>
    <string name="value">" Value of = "</string>
    <string name="download_rid_data">"Download rids data "</string>
    <string name="encrypt_over">To encrypt the data：</string>
    <string name="cal_printer_function">Call the print module</string>
    <string name="call_scan_function">Calling code modules</string>
    <string name="card_number">"Card number: "</string>
    <string name="two_track_data">"Track 2: "</string>
    <string name="three_track_data">"Track 3: "</string>
    <string name="period_of_validity">"Validity: "</string>
    <string name="magnetic_card">"  Mag card"</string>
    <string name="quick_pass">"  RF card"</string>
    <string name="ic_card">"  IC card"</string>
    <string name="s">seconds</string>
    <string name="ms">ms</string>
    <string name="pboc_time_consuming">PBOC IC the process pass</string>
    <string name="quick_pass_call_password_keyboard">Non contact call password keyboard</string>
    <string name="ic_card_transaction_success">IC card transaction success</string>
    <string name="ic_refuse_trade">IC card transaction refused, if online success, need is Reverse</string>
    <string name="pboc_error">"PBOC process error --- "</string>
    <string name="print_start">Print start</string>
    <string name="print_end">Print end</string>
    <string name="print_error">"Printing error "</string>
    <string name="scan_success">"Sweep code success barcode = "</string>
    <string name="scan_end">Sweep code ends</string>
    <string name="keyboard_input_length">Password keyboard input, the password length for now=</string>
    <string name="keyboard_error">Password keyboard input error</string>
    <string name="password_input_completed">Password to complete</string>
    <string name="no_transactions_encrypted">No secret the trade</string>
    <string name="user_cancelled">User cancelled</string>
    <string name="input_pw">Touch screen switch, please enter the password, and press the ok button!</string>
    <string name="key_value_returned">Key value is returned</string>
    <string name="please_enter_the_bank_card_password">Please enter the bank card password</string>
    <string name="pinpad_creat_success">PINPAD view to create success</string>
    <string name="pinpad_view_close">Close the PINPAD view</string>
    <string name="show_password">Show the password</string>
    <string name="set_pinpad_layout">Set the PINPAD layout</string>
    <string name="communication_error">Communication error, communication termination</string>
    <string name="show_content">Results showed</string>
    <string name="show_data">Echo show the button and button the coordinates</string>
    <string name="Get_keyboard_coordinates">Successfully get key coordinates</string>
    <string name="clean">Clear</string>
    <string name="send_command">Send Command</string>
    <string name="sign_screen">please signed on screen</string>
    <string name="please_wait">signature is to save,please wait!</string>
    <string name="eletronical_signature">Electronic signature module</string>
    <string name="ele_signature">Electronic Signature</string>
    <string name="scan_test">Scan</string>
    <string name="pinpad_test">Pinpad</string>
    <string name="iso8583_test">Iso8583</string>
    <string name="led_test">Led</string>
    <string name="tty_test">Tty</string>
    <string name="beep_test">Beep</string>
    <string name="gps_test">GPS</string>
    <string name="install_app_hide">Install App Hide</string>
    <string name="disable_keycode">Disable Keycode</string>
    <string name="print_test">Printer</string>
    <string name="card_memory">memory Card</string>
    <string name="card_vicc">vicc Card</string>
    <string name="card_psam">psam Card</string>
    <string name="id_card">Id Card</string>
    <string name="m1_card">M1 Card</string>
    <string name="mag_card">Mag Card</string>
    <string name="icc_card">IC Card</string>
    <string name="picc_card">Picc Card</string>
    <string name="m1desfire_card">M1 Desfire Card</string>
    <string name="card_reader">Mix Reader</string>
    <string name="pboc">EMV trans</string>
    <string name="get_device_info">Get device info</string>
    <string name="commu_text">Communication</string>
    <string name="database_text">Database</string>
    <string name="sale_trade">sale trade</string>
    <string name="guider">build project</string>
    <string name="cardreader_all">Read All</string>
    <string name="cardreader_only_ic">Only IC</string>
    <string name="cardreader_only_mag">Only MAG</string>
    <string name="cardreader_only_rf">Only RF</string>
    <string name="cardreader_timeout">Timeouts:</string>
    <string name="cardreader_timeout_unit">second</string>
    <string name="cardreader_field_strength">Field strength:</string>
    <string name="cardreader_field_strength_tips">please enter 0~255 range value</string>
    <string name="track_no_1">Track 1:</string>
    <string name="track_no_2">Track 2:</string>
    <string name="track_no_3">Track 3:</string>
    <string name="card_public_start">Start</string>
    <string name="card_public_over">Over</string>
    <string name="card_public_command">Command:</string>
    <string name="card_public_command_content">01000300</string>
    <string name="card_public_enter">Enter</string>
    <string name="detect_card_memory">detect memory card</string>
    <string name="detect_card_M1">detect M1 card</string>
    <string name="detect_card_Vicc">detect vicc card</string>
    <string name="detect_card_idcard">detect id card</string>
    <string name="detect_card_psam">detect psam card</string>
    <string name="detect_card_mag">detect mag card</string>
    <string name="detect_card_icc">detect IC card</string>
    <string name="detect_card_picc">detect PICC card</string>
    <string name="card_4442_pwd_left">passwd verify left</string>
    <string name="card_m1_card_unknown_explore">Identify the M1 card</string>
    <string name="pboc_normal">OnlineTrans</string>
    <string name="pboc_quick_pass">OfflineTrans</string>
    <string name="pboc_amount">Amount:</string>
    <string name="pboc_amount_tips">Effective format for Numbers and the decimal point</string>
    <string name="title_activity_online_trans_flow">onlineTransFlowActivity</string>
    <string name="scan_title">put Qr code/One dimension code into scan area</string>
    <string name="idcard_attention">Id card module is only available for CARDS and APDU interactive interface, no id card information decoding module, all to get the data for the cipher text!</string>
    <string name="transModule">modules for card trans</string>
    <string name="specialCardsModule">modules for special cards</string>
    <string name="systemModule">modules for system interface</string>
    <string name="buildProject">how to build project by sdk</string>
    <string name="modifytime">modify system time</string>
    <string name="apn">apn modules</string>
    <string name="apnadd">apn add</string>
    <string name="apndelete">apn delete</string>
    <string name="apnquerylist">query apn list</string>
    <string name="apnset">apn set</string>
    <string name="apnquery">apn query</string>
    <string name="test">union test</string>
    <string name="webview">webview test</string>
    <string name="menu_sale">SALE</string>
    <string name="menu_void">VOID</string>
    <string name="menu_auth">AUTH</string>
    <string name="menu_auth_cancel">AUTH CANCEL</string>
    <string name="menu_auth_complete">AUTH COMPLETE</string>
    <string name="menu_auth_complete_void">AUTH COMPLETE VOID</string>
    <string name="menu_manage">MANAGER</string>
    <string name="menu_sign_in">SING IN</string>
    <string name="menu_settle">SETTLE</string>
    <string name="menu_reference">REFERENCE</string>
    <string name="menu_net_setting">NET SETTING</string>
    <string name="menu_merchant_config">MERCHANT CONFIG</string>
    <string name="amount">Amount:</string>
    <string name="confirm">confirm</string>
    <string name="trade_name">Trade Type:</string>
    <string name="card_num">Card Num:</string>
    <string name="reference_no">Reference No:</string>
</resources>