<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:onClick="enterTransModule"
        android:text="@string/transModule"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:onClick="enterSpecialCardsModule"
        android:text="@string/specialCardsModule"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:onClick="enterSystemModule"
        android:text="@string/systemModule"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:onClick="buildProjects"
        android:text="@string/buildProject"/>
</LinearLayout>